force-app/main/default/objects/Division__c/Division__c.object-meta.xml
<CustomObject>
    <label>折半</label>
    <nameField>
        <displayFormat>{0000000000}</displayFormat>
        <label>折半No.</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>