force-app/main/default/objects/Division__c/fields/Division_amount_plus__c.field-meta.xml
<CustomField>
    <fullName>Division_amount_plus__c</fullName>
    <label>折半金額（+）</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>