force-app/main/default/objects/Division__c/fields/Division_comment__c.field-meta.xml
<CustomField>
    <fullName>Division_comment__c</fullName>
    <label>折半指示</label>
    <type>TextArea</type>
</CustomField>