force-app/main/default/objects/Division__c/fields/Division_processed_plus__c.field-meta.xml
<CustomField>
    <fullName>Division_processed_plus__c</fullName>
    <defaultValue>false</defaultValue>
    <label>折半処理済み（+）</label>
    <type>Checkbox</type>
</CustomField>