force-app/main/default/objects/Division__c/fields/Division_to__c.field-meta.xml
<CustomField>
    <fullName>Division_to__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>折半先</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Division_to</relationshipName>
    <type>Lookup</type>
</CustomField>