force-app/main/default/objects/Division__c/fields/Half__c.field-meta.xml
<CustomField>
    <fullName>Half__c</fullName>
    <formula>Division_to__r.LastName &amp; Division_to__r.FirstName &amp;&quot;（&quot;&amp; Division_to__r.UserCode__c &amp;&quot;）&quot;</formula>
    <label>折半先（社員番号）</label>
    <type>Text</type>
</CustomField>