force-app/main/default/objects/Division__c/fields/Lot_minus__c.field-meta.xml
<CustomField>
    <fullName>Lot_minus__c</fullName>
    <label>過去調整ロット番号（-）</label>
    <length>7</length>
    <type>Text</type>
</CustomField>