force-app/main/default/objects/Division__c/fields/owner__c.field-meta.xml
<CustomField>
    <fullName>owner__c</fullName>
    <formula>Owner:User.LastName  &amp;  Owner:User.FirstName&amp;&quot;（&quot;&amp;Owner:User.UserCode__c&amp;&quot;）&quot;</formula>
    <label>所有者（社員番号）</label>
    <type>Text</type>
</CustomField>