force-app/main/default/objects/Division__c/fields/SalesDate__c.field-meta.xml
<CustomField>
    <fullName>SalesDate__c</fullName>
    <formula>PurchaseOpportunity__r.SalesDate__c</formula>
    <label>売上日</label>
    <type>Date</type>
</CustomField>