force-app/main/default/objects/Division__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>PurchaseOpportunity__c</columns>
    <columns>OWNER.LAST_NAME</columns>
    <columns>Division_to__c</columns>
    <columns>Division_comment__c</columns>
    <columns>Division_amount_plus__c</columns>
    <columns>Lot_plus__c</columns>
    <columns>Lot_minus__c</columns>
    <columns>SalesDate__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>すべて選択</label>
</ListView>